jcr: first review

--- a/doc/paper/content/abstract.tex
+++ b/doc/paper/content/abstract.tex
@@ -1,4 +1,10 @@
 \begin{abstract}
+\tcr{I think it is a bit too detailed, and doesn't give the main punchline. 
+1) We derived FCT for particle transport
+2) it uses a low-order positivity preserving scheme (based on M-matrix properties)
+3) we use a high-order scheme that is EV
+4) the 3 above points are the novelty of the papers
+Then you can give some details}
 The entropy viscosity method introduced by Guermond \cite{guermond_ev},
 in conjunction with the Flux-Corrected Transport (FCT) algorithm, is
 applied to the transport equation using the continuous finite element
