--- a/doc/paper/shortcuts.tex
+++ b/doc/paper/shortcuts.tex
@@ -23,6 +23,8 @@
 \newcommand{\scatteringxsec}{\Sigma_\textup{s}}
 \newcommand{\fissionxsec}{\Sigma_\textup{f}}
 \newcommand{\Qext}{Q_\textup{ext}}
+\newcommand{\Qsca}{Q_\textup{sca}}
+\newcommand{\Qfis}{Q_\textup{fis}}
 \newcommand{\Qtot}{Q_\textup{tot}}
 
 % domain
