--- a/doc/paper/content/high.tex
+++ b/doc/paper/content/high.tex
@@ -1,23 +1,25 @@
 % !TEX root = ../paper.tex
 
 This section describes the entropy viscosity method applied to the scalar
-PDE given by Equation \eqref{eq:scalar_model}. Recall that the entropy
+conservation law given by Equation \eqref{eq:scalar_model}. Recall that the entropy
 viscosity method is to be used as the high-order scheme in the FCT algorithm,
-instead of the standard Galerkin method as has been used previously
-\cite{kuzmin_FCT}.
+instead of the standard Galerkin method as has been used previously in FCT-FEM schemes;
+ for Galerkin FCT-FEM examples, see, for instance, \cite{kuzmin_FCT} \tcr{can we add a few more;
+ also we do not discuss this enough int he introduction; please add some there too}.
 Usage of the entropy viscosity method in the FCT algorithm ensures convergence
 to the entropy solution \cite{guermond_secondorder}.
 
 The entropy viscosity method has been applied to a number of PDEs
 such as general scalar conservation laws of the form
 \begin{equation}\label{eq:scalar_conservation_law}
-  \ppt{u} + \nabla\cdot\mathbf{f}(u) = 0
+  \ppt{u} + \nabla\cdot\mathbf{f}(u) = 0 \eqc
 \end{equation}
-and the inviscid Euler equations \cite{guermond_ev}. The scalar model studied
-in this paper does not fit into the category of scalar conservation laws;
-instead, it is more accurately described as a \emph{balance} law, due to
+the inviscid Euler equations \cite{guermond_ev,marco_low_mach}, 
+and the two-phase seven-equation fluid model \cite{marco_SEM}. The scalar model studied
+in this paper does not fit into the general form given by Equation~\eqref{eq:scalar_conservation_law},
+due to
 the addition of the reaction term $\sigma u$ and source term $q$. Application
-of entropy viscosity to this equation is novel in this work.
+of entropy viscosity method to the transport equation model is novel and it is described below.
 
 Since the weak form of the problem does not have a unique solution, one
 must supply additional conditions called \emph{admissibility} conditions or
@@ -65,8 +67,11 @@ each problem, and $\|\mathcal{R}(u_h)\|_{L^\infty(K)}$ is the maximum of the
 entropy residual on element $K$, which can be approximated as the maximum over
 the quadrature points of element $K$.
 Designing a universally appropriate normalization constant $\hat{\eta}_K$ remains
-a challenge for the entropy viscosity method; it is likely that each conservation
-law system would benefit from a specialized definition. The objective of this
+a challenge for the entropy viscosity method (see \cite{marco_low_mach}
+for an alternate normalization for low-Mach flows).
+%; it is likely that each conservation
+%law system would benefit from a specialized definition. 
+The objective of this
 normalization coefficient is to prevent the user from needing to make significant
 adjustments to the tuning parameter $c_\mathcal{R}$ for different problems.
 A definition that produces reasonable results for a large number of problems
@@ -74,11 +79,11 @@ is the following:
 \begin{equation}
   \hat{\eta}_K \equiv \left\|\eta-\bar{\eta}\right\|_{L^\infty(\domain)} \eqc
 \end{equation}
-where $\bar{\eta}$ is the average entropy over the domain.
+where $\bar{\eta}$ is the average entropy over the entire computational domain.
 
 In addition to the entropy residual, it can
 also be beneficial to measure the jump in the gradient of the entropy flux
-across interfaces.
+across cell interfaces.
 Note that given the definition of the entropy flux, the gradient of the entropy
 flux is $\nabla\mathbf{\Psi}(u)=\nabla\eta(u)\mathbf{f}'(u)$. Then let
 $\mathcal{J}_F$ denote the jump of the normal component of the entropy flux
@@ -87,7 +92,7 @@ gradient across face $F$:
   \mathcal{J}_F \equiv |\mathbf{f}'(u)\cdot\mathbf{n}_F|
     [\![\nabla\eta(u)\cdot\mathbf{n}_F]\!] \eqc
 \end{equation}
-where the double square brackets denote a jump quantity. Then define the
+where the double square brackets denote a jump quantity. Then we define the
 maximum jump on a cell:
 \begin{equation}
   \mathcal{J}_K \equiv \max\limits_{F\in\mathcal{F}(K)} |\mathcal{J}_F| \eqp
@@ -101,35 +106,40 @@ for a cell $K$ to be
 \end{equation}
 However, it is known that the low-order viscosity for an element, as computed
 in Section \ref{sec:low}, gives enough local artificial diffusion for
-regularization; any excess of this viscosity would be excessive and further
-degrade spatial accuracy. Thus, the low-order viscosity for an element is
+regularization; any amount of viscosity larger than this low-order viscosity would be 
+excessive. Thus, the low-order viscosity for an element is
 imposed as the upper bound for the high-order viscosity:
 \begin{equation}
   \nu^H_K \equiv \min(\nu^L_K, \nu^\eta_K) \eqp
 \end{equation}
-One should see that in smooth regions, this high-order viscosity should be
-relatively small, and in regions of strong gradients or discontinuities,
-the entropy viscosity should be relatively large, ideally approximately
-as large as the low-order viscosity. Note that the latter condition can
-be achieved in part by tuning the parameters
-$c_\mathcal{R}$ and $c_\mathcal{J}$ for the particular problem.
+One can note that, in smooth regions, this high-order viscosity will be
+small, and, in regions of strong gradients or discontinuities,
+the entropy viscosity can be relatively large.
+%, ideally approximately
+%as large as the low-order viscosity. Note that the latter condition can
+%be achieved in part by tuning the parameters
+%$c_\mathcal{R}$ and $c_\mathcal{J}$ for the particular problem.
 
-Putting everything together, the high-order system for steady-state,
-explicit Euler, and Theta time discretizations are respectively expressed
-as follows:
+Finally, the high-order system of equations for the various time discretizations
+are as follows:
+\begin{subequations}
+Steady-state:
 \begin{equation}\label{eq:high_ss}
   \A^H \U = \ssrhs \eqc
 \end{equation}
+Explicit Euler:
 \begin{equation}\label{eq:high_fe}
   \M^C\frac{\U^{n+1} - \U^n}{\dt} + \A^{H,n}\U^n = \ssrhs^n \eqc
 \end{equation}
+Theta scheme:
 \begin{equation}\label{eq:high_theta}
   \M^C\frac{\U^{n+1} - \U^n}{\dt} + \theta\A^{H,n+1}\U^{n+1}
     + (1-\theta)\A^{H,n}\U^n
     = \ssrhs^\theta \eqc
 \end{equation}
+\end{subequations}
 where the high-order steady-state system matrix is defined as
-$\A^H\equiv\A + \D^H$, and the high-order diffusion matrix is defined similarly
+$\A^H\equiv\A + \D^H$, and the high-order diffusion matrix $\D^H$ is defined similarly
 to the low-order case but using the high-order viscosity instead of the low-order
 viscosity:
 \begin{equation}\label{eq:high_order_diffusion_matrix}
