--- a/doc/paper/content/limiting_coefficients.tex
+++ b/doc/paper/content/limiting_coefficients.tex
@@ -5,7 +5,8 @@
 The results in this paper use the classic multi-dimensional limiter introduced by Zalesak
 \cite{zalesak}. Recall that a limiter takes as input only the antidiffusion bounds
 $\bar{p}_i^\pm$ and the antidiffusive fluxes $P_{i,j}$ and outputs the
-limiting coefficients $L_{i,j}$. The Zalesak limiter gives the following
+limiting coefficients $L_{i,j}$. \tcr{that recall sentence is a repeat. remove?}
+The Zalesak limiter gives the following
 definition of the limiting coefficients:
 \begin{subequations}
 \begin{equation}\label{eq:flux_sums}
@@ -35,9 +36,11 @@ definition of the limiting coefficients:
 \end{subequations}
 The objective of a limiter is to maximize the amount of antidiffusion that
 can be accepted without violating the imposed solution constraints. Zalesak's
-limiter is one popular attempt at this objective due to its relatively
+limiter is one commonly used attempt at this objective due to its relatively
 simple form; however, there are possible alternatives to this limiter that
-could accept more antidiffusion without violating the imposed constraints.
-Also, one could pass antidiffusive fluxes through a given limiter multiple
+could accept more antidiffusion without violating the imposed constraints
+\tcr{you should cite a couple of examples here. one that comes to mind is the
+PhD student from JLG from about the time you graduated}.
+Finally, one could pass antidiffusive fluxes through a given limiter multiple
 times, using the remainder antidiffusive flux as the input in each pass,
-to increase the total antidiffusion accepted.
+to increase the total antidiffusion accepted. \tcr{another reference here. doesn't kuzmin do this as well?}
